--- a/malla.html
+++ b/malla.html
@@ -9,12 +9,18 @@
         <table align="center">
             <tr> 
                 <td colspan="1" rowspan="1">
+                    <p><img src="01.jpg" aling="left" width="80" height="80" /></p>
+               </td>
+                <td colspan="1" rowspan="1">
                    <div align="center">UNIVERSIDAD NACIONAL DE CAAGUAZU</div>
                    <div align="center">FACULTAD DE CIENCIAS Y TECNOLOGIAS</div>
                    <div align="center">Sede Coronel Oviedo</div>
                    <div align="center">Plan curricular 2020</div>
                     <p>CARRERA: INGENIERIA EN INFORMATICA</p>   
-                </td>               
+                </td>  
+                <td colspan="1" rowspan="1">
+                    <p><img src="02.jpg" aling="right" width="90" height="90" /></p>
+                </td>             
             </tr>
         </table>
    </header>
